-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: security-libs
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8063799 | 8u45 | Valerie Peng | P4 | Resolved | Fixed | b01 |
| JDK-8055081 | 8u40 | Valerie Peng | P4 | Resolved | Fixed | b04 |
| JDK-8070251 | emb-8u47 | Valerie Peng | P4 | Resolved | Fixed | team |
Test failed: sun/security/krb5/auto/ReplayCacheTestProc.java
Possibly related to JDK-8031003. The test starts failing on Mar 27 since code changes for JDK-8031003.
Possibly related to JDK-8031003. The test starts failing on Mar 27 since code changes for JDK-8031003.
- backported by
-
JDK-8055081 ReplayCacheTestProc test fails with timeout
-
- Resolved
-
-
JDK-8063799 ReplayCacheTestProc test fails with timeout
-
- Resolved
-
-
JDK-8070251 ReplayCacheTestProc test fails with timeout
-
- Resolved
-