8038754: ReplayCacheTestProc test fails with timeout

Reviewed-by: alanb